# git_rs

./: Cargo.toml
.gitrs/: HEAD  config
command_parser/: Cargo.toml
command_parser/src/: lib.rs
git_worker/: Cargo.toml
git_worker/src/: lib.rs
src/: main.rs
