[package]
name = "rust_git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
command_parser = {path = "./command_parser"}
git_worker = {path = "./git_worker"}
rust-crypto = "0.2.36"
sha1 = "0.10.6"
digest = "0.10.7"